@@ -20,6 +20,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 - patch #3013264 [doc] FAQ 1.40 uses a comma instead of a period,
   thanks to Isaac Bennetch - ibennetch
 - [engines] Fix getting InnoDB status.
+- bug #2986422 [import] Results for query are not displayed
 
 3.3.3.0 (2010-05-10)
 - patch #2982480 [navi] Do not group if there would be one table in group,
